--- a/react_js_base_code-main G7/src/views/containers/Admin/Dashboard/Dashboard.css
+++ b/react_js_base_code-main G7/src/views/containers/Admin/Dashboard/Dashboard.css
@@ -10,6 +10,10 @@
   overflow: scroll;
 }
 
+.stats-container::-webkit-scrollbar {
+  display: none;
+}
+
 .stats-header {
   display: flex;
   align-items: center;
