--- a/react_js_base_code-main G7/src/views/containers/Admin/Users/Users.css
+++ b/react_js_base_code-main G7/src/views/containers/Admin/Users/Users.css
@@ -1,3 +1,9 @@
+* {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+
+}
+
 .user-management-container {
   max-width: 1200px;
   margin: 0 auto;
@@ -6,6 +12,8 @@
   background-color: #f5f7fa;
   border-radius: 10px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+  height: calc(100vh - 1rem);
+  overflow-y: scroll;
 }
 
 .user-management-header {
