--- a/react_js_base_code-main G7/src/views/containers/CalendarBooking/CalendarBooking.css
+++ b/react_js_base_code-main G7/src/views/containers/CalendarBooking/CalendarBooking.css
@@ -30,7 +30,7 @@ input {
   transition: all 0.3s ease;
   max-height: calc(100vh - 60px);
   overflow: auto;
-  height: fit-content;
+  height: auto;
 }
 
 .calendar-booking-main.shifted {
